--- a/Blog.html
+++ b/Blog.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 	<title>Balay</title>
 	    <link rel="stylesheet" type="text/css" media="screen" href="Balay.css">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	    <script src="js/cycle.js"></script>
-	    <script >
-	    	$('#slider').cycle();
-	    </script>
-
-
+	
 </head>
 <body>
-
-	<div id="nav-div">
+<div id="nav-div">
 <h1 id="logo"><b>Concept Interior</b></h1>
 <ul id="nav-bar">
 				<a href="C:\Users\dell\Desktop\New folder\Balay.html"><li class ="nav-element" id="first">HOME</li></a>
@@ -38,58 +30,6 @@
 
 		
 	</div>
-<div id="bodyleft">
-		<!-- <h2>ahmed</h2> -->
-		<div id ="slider">
-		<img src=images/img_bg_1.jpg >
-		<img src=images/img_bg_2.jpg >
-		<img src=images/img_bg_3.jpg >
-
-
-</div>
-	</div><br>
-
-<div id="welcome">
-	<img src="images/img_bg_2.jpg">
-	<p>Welcome</p>
-	<h2>Recent Work</h2><br>
-	<p>
-On her way she met a copy. The copy warned the Little
-Blind Text, that where it came from it would have been
-rewritten  a thousand times and everything that was 
-left from its origin would be the word "and" and the 
-Little Blind Text should turn around and return to its
- own, safe country.
-
-
-A small river named Duden flows by their place and
-supplies it with the necessary regelialia. It is a 
-paradisematic country, in which roasted parts of 
-sentences fly into your mouth.
-
-
-
-	</p>
-
-</div>
-
-
-<div id="adv">
-	<p>My Work</p>
-	
-	<h2>Recent Work</h2><br>
-
-	<ul id="adv1">
-		<li class ="adv-element"><img src="images/img-1.jpg"></li>
-		<li class ="adv-element"><img src="images/img-2.jpg"></li>
-		<li class ="adv-element"><img src="images/img-3.jpg"></li>
-		<li class ="adv-element"><img src="images/img-4.jpg"></li>
-		<li class ="adv-element"><img src="images/img-5.jpg"></li>
-		<li class ="adv-element"><img src="images/img-6.jpg"></li>
-	</ul>
-
-</div><br>
-
 
 	<div id="adv">
 
@@ -100,34 +40,30 @@ sentences fly into your mouth.
 		<li class ="adv-element"><img src="images/blog-1.jpg"></a></li>
 		<li class ="adv-element"><img src="images/blog-2.jpg"></a></li>
 		<li class ="adv-element"><img src="images/blog-3.jpg"></a></li>
+		<li class ="adv-element"><img src="images/blog-4.jpg"></a></li>
+		<li class ="adv-element"><img src="images/blog-5.jpg"></a></li>
+		<li class ="adv-element"><img src="images/blog-6.jpg"></a></li>
 
 	</ul>
-	<ul id="des">
-		<li <a href=""><small>April 14, 2018 | WEB DESIGN </small></a></li>
-		<li <a href=""><small>April 14, 2018 | WEB DESIGN</small></a></li>
-		<li <a href=""><small>April 14, 2018 | WEB DESIGN</small></a></li>
-		
-		 
-	</ul>
+</div>
 
-	
-	</div><br>
+</body>
 
-</body><br>
 <footer>
 	<br>
 <div ><br>
 		<h2 >
 		Get In Touch!
 		</h2><br>
-<p class="text">
+<pre>
 Separated they live in Bookmarksgrove right at the coast
  of the Semantics, a large language ocean.	
-</p><br>
+</pre><br>
 
 <p class ="btn">
 	<a href="#" >Contact me!</a>
 </p>
 </div>
 </footer>
+
 </html>
