--- a/Balay.html
+++ b/Balay.html
@@ -4,11 +4,14 @@
 
 	<title>Balay</title>
 	    <link rel="stylesheet" type="text/css" media="screen" href="Balay.css">
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	    <script src="js/cycle.js"></script>
+
+
 	    <script >
-	    	$('#slider').cycle();
+	    	 $('#slider').cycle(); 
+	    
 	    </script>
 
 
@@ -45,6 +48,8 @@
 		<img src=images/img_bg_2.jpg >
 		<img src=images/img_bg_3.jpg >
 
+</div>
+
 
 </div>
 	</div><br>
@@ -66,26 +71,70 @@ A small river named Duden flows by their place and
 supplies it with the necessary regelialia. It is a 
 paradisematic country, in which roasted parts of 
 sentences fly into your mouth.
-
-
-
 	</p>
 
 </div>
 
-
+<!-- 	<div id="ri8">
+		<p>My Work</p>
+		<h2>Recent Work</h2>
+		<ul>
+			<li><img src="images/img-1.jpg"></li>
+			<li><img src="images/img-1.jpg"></li>
+			<li><img src="images/img-1.jpg"></li>
+		</ul>
+	</div>
+ -->
 <div id="adv">
 	<p>My Work</p>
-	
 	<h2>Recent Work</h2><br>
 
+
 	<ul id="adv1">
-		<li class ="adv-element"><img src="images/img-1.jpg"></li>
-		<li class ="adv-element"><img src="images/img-2.jpg"></li>
-		<li class ="adv-element"><img src="images/img-3.jpg"></li>
-		<li class ="adv-element"><img src="images/img-4.jpg"></li>
-		<li class ="adv-element"><img src="images/img-5.jpg"></li>
-		<li class ="adv-element"><img src="images/img-6.jpg"></li>
+		<li class ="adv-element"><img src="images/img-1.jpg">
+<center>
+	<button id="btn2"><i class="fa fa-heart"></i></button>
+	<button id="btn2"><i class="fa fa-eye"></i></button>
+	<button id="btn2"><i class="fa fa-shopping-cart"></i></button>
+
+</center>
+		</li>
+		<li class ="adv-element"><img src="images/img-2.jpg">
+		<center>
+	<button id="btn2"><i class="fa fa-heart"></i></button>
+	<button id="btn2"><i class="fa fa-eye"></i></button>
+	<button id="btn2"><i class="fa fa-shopping-cart"></i></button>
+
+</center>
+</li>
+		<li class ="adv-element"><img src="images/img-3.jpg">
+			<center>
+	<button id="btn2"><i class="fa fa-heart"></i></button>
+	<button id="btn2"><i class="fa fa-eye"></i></button>
+	<button id="btn2"><i class="fa fa-shopping-cart"></i></button>
+
+</center></li>
+		<li class ="adv-element"><img src="images/img-4.jpg">
+			<center>
+	<button id="btn2"><i class="fa fa-heart"></i></button>
+	<button id="btn2"><i class="fa fa-eye"></i></button>
+	<button id="btn2"><i class="fa fa-shopping-cart"></i></button>
+
+</center></li>
+		<li class ="adv-element"><img src="images/img-5.jpg">
+			<center>
+	<button id="btn2"><i class="fa fa-heart"></i></button>
+	<button id="btn2"><i class="fa fa-eye"></i></button>
+	<button id="btn2"><i class="fa fa-shopping-cart"></i></button>
+
+</center></li>
+		<li class ="adv-element"><img src="images/img-6.jpg">
+			<center>
+	<button id="btn2"><i class="fa fa-heart"></i></button>
+	<button id="btn2"><i class="fa fa-eye"></i></button>
+	<button id="btn2"><i class="fa fa-shopping-cart"></i></button>
+
+</center></li>
 	</ul>
 
 </div><br>
@@ -97,9 +146,9 @@ sentences fly into your mouth.
 	
 	<h2>Recent Blog</h2><br>
 	<ul id="adv1">
-		<li class ="adv-element"><img src="images/blog-1.jpg"></a></li>
-		<li class ="adv-element"><img src="images/blog-2.jpg"></a></li>
-		<li class ="adv-element"><img src="images/blog-3.jpg"></a></li>
+		<li class ="adv-element1"><img src="images/blog-1.jpg"></li>
+		<li class ="adv-element1"><img src="images/blog-2.jpg"></li>
+		<li class ="adv-element1"><img src="images/blog-3.jpg"></li>
 
 	</ul>
 	<ul id="des">
