--- a/Balay.html
+++ b/Balay.html
@@ -207,7 +207,7 @@ Separated they live in Bookmarksgrove right at the coast
 </p><br>
 
 <p class ="btn">
-	<a href="#" >Contact me!</a>
+	<a href="#" >Contact Us!</a>
 </p>
 </div>
 </footer>
