--- a/Blog.html
+++ b/Blog.html
@@ -10,11 +10,11 @@
 <div id="nav-div">
 <h1 id="logo"><b>Concept Interior</b></h1>
 <ul id="nav-bar">
-				<a href="C:\Users\dell\Desktop\New folder\Balay.html"><li class ="nav-element" id="first">HOME</li></a>
+				<a href="C:\Users\dell\Desktop\New folder\Balay.html"><li class ="nav-element" >HOME</li></a>
 				<a href="C:\Users\dell\Desktop\New folder\product.html"><li class ="nav-element">PROJECT</li></a>
 				<a href="C:\Users\dell\Desktop\New folder\About.html"><li class ="nav-element">ABOUT</li></a>
 				<a href="C:\Users\dell\Desktop\New folder\Services.html"><li class ="nav-element">SERVICES</li></a>
-				<a href="C:\Users\dell\Desktop\New folder\Blog.html"><li class ="nav-element">BLOG</li></a>
+				<a href="C:\Users\dell\Desktop\New folder\Blog.html"><li class ="nav-element" id="first">BLOG</li></a>
 				<a href="C:\Users\dell\Desktop\New folder\Contact.html"><li class ="nav-element">CONTACT</li></a>
 			</ul>
 			
@@ -55,10 +55,10 @@
 		<h2 >
 		Get In Touch!
 		</h2><br>
-<pre>
+<p class="text">
 Separated they live in Bookmarksgrove right at the coast
  of the Semantics, a large language ocean.	
-</pre><br>
+</p><br>
 
 <p class ="btn">
 	<a href="#" >Contact me!</a>
