--- a/Contact.html
+++ b/Contact.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Balay</title>
-	    <link rel="stylesheet" type="text/css" media="screen" href="Balay.css">
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	
+	<title>Form</title>
+	<link rel="stylesheet" type="text/css" href="Balay.css">
 </head>
+
+
+
+
 <body>
-<div id="nav-div">
-<h1 id="logo"><b>Concept Interior</b></h1>
-<ul id="nav-bar">
+
+	<div id="nav-div">
+	<h1 id="logo"><b>Concept Interior</b></h1>
+	<ul id="nav-bar">
 				<a href="C:\Users\dell\Desktop\New folder\Balay.html"><li class ="nav-element" id="first">HOME</li></a>
 				<a href="C:\Users\dell\Desktop\New folder\product.html"><li class ="nav-element">PROJECT</li></a>
 				<a href="C:\Users\dell\Desktop\New folder\About.html"><li class ="nav-element">ABOUT</li></a>
@@ -21,7 +24,7 @@
 
 			  <blockquote id="nav-quote"> <b>For a house to be successful, the objects in it must communicate with one another, respond and 
             balance one another.</b></blockquote> 
-<p id="icon">
+	<p id="icon">
             <a href="#"><i id ="I" class="fa fa-facebook"></i></a>
             <a href="#"><i id ="I" class="fa fa-linkedin"></i></a>
             <a href="#"><i id ="I" class="fa fa-instagram"></i></a>
@@ -30,32 +33,26 @@
 
 		
 	</div>
-<div id="welcome">
-	<img src="images/img_bg_2.jpg">
-	<p>Welcome</p>
-	<h2>Recent Work</h2><br>
-	<pre>
-On her way she met a copy. The copy warned the Little
-Blind Text, that where it came from it would have been
-rewritten  a thousand times and everything that was 
-left from its origin would be the word "and" and the 
-Little Blind Text should turn around and return to its
- own, safe country.
 
+<div id="form">
+		<form >
+		<p><br>
+		<input  type="text" name="" size=15 placeholder="  Name">
+		</p>
+		<p ><br>
+		<input type="text" name="" size=10 placeholder="  Email">
+		</p>
+		<p ><br>
+		<input type="text" name="" size=10 placeholder="  Subject">
+		</p><br>
+		<textarea  rows="10 cols="50" placeholder="  Message"></textarea>
+		<br>
+		<p class ="btnform">
+		<a href="#" >SEND MESSAGE</a></p>
+		</form>
+		</div>
 
-A small river named Duden flows by their place and
-supplies it with the necessary regelialia. It is a 
-paradisematic country, in which roasted parts of 
-sentences fly into your mouth.
-
-
-
-	</pre>
-
-</div>
-
-
-</body>
+		</body>
 
 <footer>
 	<br>
@@ -63,55 +60,14 @@ sentences fly into your mouth.
 		<h2 >
 		Get In Touch!
 		</h2><br>
-<pre>
+<p class="text">
 Separated they live in Bookmarksgrove right at the coast
  of the Semantics, a large language ocean.	
-</pre><br>
+</p><br>
 
 <p class ="btn">
-	<a href="#" >Contact me!</a>
+	<a href="#" >Contact Us!</a>
 </p>
 </div>
 </footer>
-
-</html>
-
-
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Balay</title>
-</head>
-<table>
-		<form>
-		<tr>
-		<td>
-			<input type="text" name="" placeholder="Name">
-		</td>
-		</tr>
-		<tr>
-		<td>
-			<input type="text" name="" placeholder="Email">
-		</td>
-		</tr>
-		<tr>
-		<td>
-			<input type="text" name="" placeholder="Subject">
-		</td>
-		</tr>
-		<tr>
-		<td>
-			<input type="text" name="" placeholder="Message">
-		</td>
-		</tr>
-		<tr>
-		<td>
-			<button id="contect" type="textarea" name="" placeholder="Name">Send Message</button>
-		</td>
-		</tr>
-		</form>
-		</table>
-		<body>
-
-</body>
 </html>
